--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (1.0.1) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Wed, 19 Nov 2025 12:04:46 +0000
+
 msu-manager (1.0.0) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
