--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (1.0.2) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Thu, 20 Nov 2025 09:56:53 +0000
+
 msu-manager (1.0.1) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
