--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (2.0.1) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Thu, 15 Jan 2026 15:52:46 +0000
+
 msu-manager (2.0.0) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
