--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (3.0.0) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Tue, 20 Jan 2026 12:45:14 +0000
+
 msu-manager (2.0.1) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
