--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (3.0.2) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Fri, 30 Jan 2026 08:29:41 +0000
+
 msu-manager (3.0.1) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
