--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+msu-manager (3.0.3) unstable; urgency=medium
+
+  *  --author Build Bot <foss@starwit.de>
+
+ -- Markus Zarbock <foss@starwit.de>  Wed, 11 Feb 2026 16:10:18 +0000
+
 msu-manager (3.0.2) unstable; urgency=medium
 
   *  --author Build Bot <foss@starwit.de>
